# bevy_serialization_extras

./: CHANGELOG.md  Cargo.toml  README.md  cube.ron  demo_gif.webm  test_urdf.xml
assets/: correct_cube.gltf  cube.glb
assets/model_pkg/models/: base.glb  caster_wheel_decimated.glb  caster_wheel_decimated2.glb  left_wheel.glb  left_wheel_decimated.glb  left_wheel_test.glb  right_wheel.glb  right_wheel_decimated.glb  wheel.glb
assets/model_pkg/urdf/: diff_bot.xml
assets/models/: motor.glb  motor_with_physics.gltf
assets/robots/diff_bot/urdf/: diff_bot.xml
assets/saves/: green.ron  red.ron
assets/urdf_tutorial/urdfs/: full_urdf_tutorial_bot.xml  tutorial_bot.xml
crates/bevy_assemble/: Cargo.toml
crates/bevy_assemble/examples/: model_load_tests.rs  robot_serialization.rs
crates/bevy_assemble/src/: components.rs  lib.rs  plugins.rs  systems.rs
crates/bevy_assemble/src/gltf/: mod.rs  wrappers.rs
crates/bevy_assemble/src/urdf/: resources.rs  urdf.rs  visual.rs
crates/bevy_serialization_assemble/: Cargo.toml
crates/bevy_serialization_assemble/examples/: gltf_physics_testing.rs  model_load_tests.rs  robot_serialization.rs
crates/bevy_serialization_assemble/saves/: diff_bot.xml
crates/bevy_serialization_assemble/src/: components.rs  lib.rs  plugins.rs  resources.rs  systems.rs  traits.rs
crates/bevy_serialization_assemble/src/gltf/: khr_implicit_shapes.rs  khr_physics_rigid_bodies.rs  mod.rs  wrappers.rs
crates/bevy_serialization_assemble/src/gltf/OLD/: components.rs
crates/bevy_serialization_assemble/src/gltf/physics/: mod.rs
crates/bevy_serialization_assemble/src/gltf/physics/khr_implicit_shapes/: khr_implicit_shapes.rs  mod.rs
crates/bevy_serialization_assemble/src/gltf/physics/khr_physics_rigid_bodies/: extension.rs  khr_physics_rigid_bodies.rs  khr_physics_rigid_bodies_nodes.rs  mod.rs  node.rs
crates/bevy_serialization_assemble/src/gltf/wrappers/: mod.rs
crates/bevy_serialization_assemble/src/urdf/: loader.rs  mod.rs  resources.rs  urdf.rs  visual.rs
crates/bevy_serialization_core/: Cargo.toml  savestest_urdf.xml
crates/bevy_serialization_core/examples/: example_world.rs  save_load.rs
crates/bevy_serialization_core/saves/: green.ron  red.ron
crates/bevy_serialization_core/src/: asset_source.rs  components.rs  lib.rs  plugins.rs  queries.rs  resources.rs  systems.rs  traits.rs  ui.rs
crates/bevy_serialization_core/src/bundles/: model.rs
crates/bevy_serialization_core/src/wrappers/: material.rs  mesh.rs  mod.rs
crates/bevy_serialization_core/src/wrappers/material/: mod.rs
crates/bevy_serialization_core/src/wrappers/mesh/: mod.rs
crates/bevy_serialization_core/src/wrappers/mesh/gltf/: components.rs  mod.rs  system.rs
crates/bevy_serialization_physics/: Cargo.toml
crates/bevy_serialization_physics/assets/urdf_tutorial/meshes/: l_finger_tip.mtl
crates/bevy_serialization_physics/assets/urdf_tutorial/urdfs/: model_load_test.xml
crates/bevy_serialization_physics/examples/: bevy_rapier_example.rs  entity_commands_test.rs  raycast_testing.rs  sample_robot_load.rs
crates/bevy_serialization_physics/src/: lib.rs  plugins.rs  systems.rs  ui.rs
crates/bevy_serialization_physics/src/bundles/: mod.rs  physics.rs
crates/bevy_serialization_physics/src/loaders/: mod.rs  urdf_loader.rs
crates/bevy_serialization_physics/src/wrappers/: colliders.rs  collisiongroupfilter.rs  continous_collision.rs  friction.rs  link.rs  mass.rs  mod.rs  rigidbodies.rs  solvergroupfilter.rs  urdf.rs
crates/bevy_synonomize/: Cargo.toml
crates/bevy_synonomize/examples/: save_load.rs  synonomizations.rs
crates/bevy_synonomize/src/: lib.rs  plugins.rs  systems.rs  traits.rs
crates/bevy_synonomize/src/wrappers/: mod.rs
crates/bevy_synonymize/: Cargo.toml
crates/bevy_synonymize/examples/: synonymization.rs
crates/bevy_synonymize/src/: lib.rs  plugins.rs  resources.rs  systems.rs  traits.rs
crates/bevy_synonymize/src/synonyms/: mod.rs
crates/bevy_synonymize_physics/: Cargo.toml
crates/bevy_synonymize_physics/examples/: bevy_rapier_example.rs
crates/bevy_synonymize_physics/src/: lib.rs  plugins.rs  systems.rs
crates/bevy_synonymize_physics/src/synonyms/: colliders.rs  collisiongroupfilter.rs  continous_collision.rs  link.rs  mass.rs  rigidbodies.rs  solvergroupfilter.rs
crates/bevy_synonymize_physics/src/wrappers/: colliders.rs  collisiongroupfilter.rs  continous_collision.rs  link.rs  mass.rs  rigidbodies.rs  solvergroupfilter.rs
crates/bevy_synonymize_save/: Cargo.toml
crates/bevy_synonymize_save/examples/: save_load.rs
crates/bevy_synonymize_save/saves/: red.ron
crates/bevy_synonymize_save/src/: lib.rs  plugins.rs  resources.rs  systems.rs
crates/bevy_synonyms/: Cargo.toml
crates/bevy_synonyms/src/: lib.rs
crates/bevy_synonyms_physics/: Cargo.toml
crates/bevy_synonyms_physics/examples/: bevy_rapier_example.rs
crates/bevy_synonyms_physics/src/: plugins.rs  systems.rs
crates/bevy_synonyms_physics/src/wrappers/: colliders.rs  collisiongroupfilter.rs  continous_collision.rs  link.rs  mass.rs  (+2 more)
crates/bevy_synonyms_save/: Cargo.toml
crates/bevy_synonyms_save/saves/: red.ron
crates/bevy_synonyms_save/src/: plugins.rs  resources.rs  systems.rs
crates/querybundle_derive/src/: lib.rs
cube/: cube.gltf
examples/: bevy_rapier_example.rs  entity_commands_test.rs  example_world.rs  input_test.rs  sample_robot_load.rs
glTF_ouput_dir/: cube(PRE-REFACTOR).gltf  cube.gltf
querybundle_derive/: Cargo.toml
querybundle_derive/src/: lib.rs
src/: asset_source.rs  components.rs  lib.rs  plugins.rs  queries.rs  resources.rs  states.rs  systems.rs  traits.rs  ui.rs
src/ARCHIVE/: systems.rs
src/bundles/: mod.rs  model.rs  physics.rs
src/loaders/: urdf_loader.rs
src/physics/: colliders.rs  collisiongroupfilter.rs  components.rs  friction.rs  material.rs  mesh(OLD).rs  mesh.rs  mod.rs  rigidbodies.rs  solvergroupfilter.rs
src/wrappers/: colliders.rs  collisiongroupfilter.rs  continous_collision.rs  friction.rs  joint.rs  link.rs  mass.rs  material.rs  mesh.rs  mod.rs  rigidbodies.rs  solvergroupfilter.rs  urdf.rs
(+7 files in other folders)
