[package]
name = "bevy_serialization_extras"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
readme = "README.md"
license = "MIT"
description = "A crate for managing serialization with moonshine_save + wrappers."

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
bevy-inspector-egui = "0.29.0"
bytemuck = "1.2"
bevy_camera_extras = "0.15"
bevy_ui_extras = "0.18"
bevy_rapier3d = "0.28"
rapier3d = "0.22.0"
bevy = "0.15"
bevy_ecs = "0.15"
bevy_core = "0.15"
bevy_input = "0.15"
bevy_render = "0.15"
bevy_app = "0.15"
bevy_reflect = "0.15"
bevy_pbr = "0.15"
bevy_utils = "0.15"
bevy_math = "0.15"
bevy_log = "0.15"
bevy_obj = "0.15"
bevy_core_pipeline = "0.15"
bevy_asset = "0.15"
bevy_hierarchy = "0.15"
bevy_gltf = "0.15"
bevy_transform = "0.15"
bevy_window = "0.15"
bevy_picking = "0.15"
bevy_derive = "0.15"
bevy_color = "0.15"
bevy_state = "0.15"
moonshine-save = "0.3.10"
glam = "0.29"
ron = "0.8"
bevy_egui = "0.31"
egui = "0.29"
egui_extras = "0.29"
urdf-rs = "0.8.0"
multimap = "0.10"
strum = "0.26"
thiserror = "2.0"
strum_macros = "0.26"
bitflags = "2.4.1"
nalgebra = "0.33"
yaserde = "0.12"
derive_more = "1"
bitvec = "1.0"
log = "0.4.2"
bevy_serialization_core = {path = "./crates/bevy_serialization_core", version = "0.6.0"}
bevy_serialization_physics = {path = "./crates/bevy_serialization_physics", version = "0.6.0"}
bevy_serialization_assemble = {path = "./crates/bevy_serialization_assemble", version = "0.1"}

[dependencies]
bevy_serialization_core = {workspace = true}
bevy_serialization_physics = {optional = true, workspace = true}
bevy_serialization_assemble = {optional = true, workspace = true}



[features]
default = ["physics", "assemble"]
physics = ["bevy_serialization_physics"]
assemble = ["bevy_serialization_assemble"]