[package]
name = "bevy_serialization_extras"
version = "0.10.0-beta.0"
edition = "2024"
repository = "https://github.com/rydb/bevy_serialization_extras"
readme = "README.md"
license = "MIT"
description = "A crate for managing serialization with moonshine_save + wrappers."

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1"
bevy-inspector-egui = "0.31.0"
bytemuck = "1.22"
bevy_camera_extras = "0.16"
bevy_ui_extras = "0.20"
ref-cast = "1.0"
gltf = "1.4"
serde_json = {version = "1"}
serde = {version = "1"}
# bevy_rapier3d = "0.29"
bevy_rapier3d = {git = "https://github.com/mnmaita/bevy_rapier", rev = "98da7beae596001a6daf59a62d3e1e19adb4811b"}
rapier3d = "0.24.0"
repr-trait = "1.0"
bevy = "0.16"
bevy_ecs = "0.16"
bevy_input = "0.16"
bevy_render = "0.16"
bevy_app = "0.16"
const_format = "0.2"
bevy_reflect = "0.16"
bevy_pbr = "0.16"
bevy_utils = "0.16"
bevy_math = "0.16"
bevy_log = "0.16"
bevy_tasks = "0.16"
bevy_core_pipeline = "0.16"
bevy_asset = "0.16"
bevy_internal = {version = "0.16", features = ["serialize"]}
bevy_gltf = "0.16"
bevy_transform = "0.16"
bevy_window = "0.16"
bevy_picking = "0.16"
bevy_derive = "0.16"
bevy_color = "0.16"
bevy_state = "0.16"
moonshine-save = "0.4.1"
glam = "0.29"
ron = "0.10"
urdf-rs = "0.9.0"
multimap = "0.10"
strum = "0.27"
thiserror = "2.0"
strum_macros = "0.27"
bitflags = "2.4.1"
nalgebra = "0.33"
yaserde = "0.12"
derive_more = {version = "2", features = ["from"]}
bitvec = "1.0"
log = "0.4.2"

bevy_synonymize = {path = "./crates/bevy_synonymize", version = "0.8.0-beta.0"}
bevy_synonymize_save = {path = "./crates/bevy_synonymize_save"}
bevy_synonymize_physics = {path = "./crates/bevy_synonymize_physics", version = "0.8.0-beta.0"}
bevy_assemble = {path = "./crates/bevy_assemble", version = "0.3.0-beta.0"}

[dependencies]
bevy_synonymize = {workspace = true}
bevy_synonymize_save = {workspace = true}
bevy_synonymize_physics = {optional = true, workspace = true}
bevy_assemble = {optional = true, workspace = true}



[features]
default = ["physics", "assemble"]
physics = ["bevy_synonymize_physics"]
assemble = ["bevy_assemble"]