[package]
name = "bevy_serialization_assemble"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
license = "MIT"
description = "A crate for assembling assets from entities and components"


[dependencies]
anyhow = {workspace = true}
bevy_serialization_core = {workspace = true}
bevy_serialization_physics = {workspace = true}
bevy_ecs = {workspace = true}
bevy_transform = {workspace = true}
bevy_render = {workspace = true}
bevy_reflect = {workspace = true}
bevy_color = {workspace = true}
bevy_utils = {workspace = true}
bevy_state = {workspace = true}
bevy_asset = {workspace = true}
bevy_app = {workspace = true}
bevy_pbr = {workspace = true}
bevy_log = {workspace = true}
bevy_derive = {workspace = true}
bevy_core = {workspace = true}
bevy_gltf = {workspace = true}
thiserror = {workspace = true}
bevy_hierarchy = {workspace = true}
derive_more = {workspace = true}
glam = {workspace = true}
nalgebra = {workspace = true}
urdf-rs = {workspace = true}
bevy_math = {workspace = true}
moonshine-save = {workspace = true}
strum_macros = {workspace = true}
strum = {workspace = true}
bevy_rapier3d = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = [
    "dynamic_linking", 
    "trace_tracy"
]}
bevy_ui_extras = {workspace = true}
moonshine-save = {workspace = true}
bevy_camera_extras = {workspace = true}
bevy_rapier3d = {workspace = true}
bevy_obj = {workspace = true}
bevy-inspector-egui = {workspace = true}
