[package]
name = "bevy_serialization_core"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
license = "MIT"
description = "A crate which contains the plugins/systems that bevy_serializations_extras relies on, + some misc wrappers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.13"
bevy_ecs = "0.14"
bevy_render = "0.14"
bevy_app = "0.14"
bevy_reflect = "0.14"
bevy_pbr = "0.14"
bevy_utils = "0.14"
bevy_math = "0.14"
bevy_core_pipeline = "0.14"
bevy_asset = "0.14"
bevy_transform = "0.14"
bevy_window = "0.14"
bevy_color = "0.14"

glam = "0.28"
ron = "0.8"
moonshine-save = "0.3.8"
bevy_egui = "0.28"
egui = "0.28"
egui_extras = "0.28"
urdf-rs = "0.8.0"
multimap = "0.10"
strum = "0.26"
thiserror = "1.0"
strum_macros = "0.26"
bitflags = "2.4.1"
nalgebra = "0.33"
#serde = "1.0.*"
yaserde = "0.10"
derive_more = "0.99"
bitvec = "1.0"
#bevy_obj = "0.13"
log = "0.4.2"

[dev-dependencies]
bevy = {version = "0.14", features = ["dynamic_linking"]}
bevy_ui_extras = "0.7"
bevy-inspector-egui = "0.25.0"
bevy_camera_extras = "0.10"
