[package]
name = "bevy_serialization_core"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
license = "MIT"
description = "A crate which contains the plugins/systems that bevy_serializations_extras relies on, + some misc wrappers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.13"
bevy_ecs = {workspace = true}
bevy_render = {workspace = true}
bevy_app = {workspace = true}
bevy_reflect = {workspace = true}
bevy_pbr = {workspace = true}
bevy_utils = {workspace = true}
bevy_math = {workspace = true}
bevy_core_pipeline = {workspace = true}
bevy_asset = {workspace = true}
bevy_transform = {workspace = true}
bevy_window = {workspace = true}
bevy_color = {workspace = true}

glam = {workspace = true}
ron = {workspace = true}
moonshine-save = {workspace = true}
bevy_egui = {workspace = true}
egui = {workspace = true}
egui_extras = {workspace = true}
urdf-rs = {workspace = true}
multimap = {workspace = true}
strum = {workspace = true}
thiserror = {workspace = true}
strum_macros = {workspace = true}
bitflags = {workspace = true}
nalgebra = {workspace = true}
#serde = "1.0.*"
yaserde = {workspace = true}
derive_more = {workspace = true}
bitvec = {workspace = true}
#bevy_obj = "0.13"
log = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy_ui_extras = {workspace = true}
bevy-inspector-egui = {workspace = true}
bevy_camera_extras = {workspace = true}
