[package]
name = "bevy_serialization_physics"
version = "0.1.0"
edition = "2021"
description = "A crate for adding physics wrappers for bevy_serialization_extras"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_serialization_core = {path = "../bevy_serialization_core"}


bevy = "0.12"
bevy_rapier3d = "0.23"
rapier3d = "0.17.2"
glam = "0.25"
ron = "0.8"
moonshine-save = "0.3.4"
strum = "0.25"
strum_macros = "0.25"
bitflags = "2.4.1"
nalgebra = "0.32"
#yaserde = "0.9"
derive_more = "0.99"
bitvec = "*"
bevy_obj = "0.12"
log = "*"
bevy_egui = "0.24"

bevy_ui_extras = "0.4.1"
egui = "0.24"
egui_extras = "0.24"


bevy_mod_raycast = "0.16"


[dev-dependencies]
bevy = {version = "0.12", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.22.0"

bevy_camera_extras = "*"
egui-gizmo = "*"
