[package]
name = "bevy_serialization_physics"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
license = "MIT"
description = "A crate for adding physics wrappers for bevy_serialization_extras"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_serialization_core = {workspace = true}

bevy_ecs = {workspace = true}
bevy_render = {workspace = true}
bevy_app = {workspace = true}
bevy_reflect = {workspace = true}
bevy_pbr = {workspace = true}
bevy_utils = {workspace = true}
bevy_math = {workspace = true}
bevy_core_pipeline = {workspace = true}
bevy_asset = {workspace = true}
bevy_transform = {workspace = true}
bevy_window = {workspace = true}
bevy_core = {workspace = true}
bevy_input = {workspace = true}
#bevy = "0.13"
bevy_rapier3d = {workspace = true}
rapier3d = {workspace = true}
glam = {workspace = true}
ron = {workspace = true}
moonshine-save = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
bitflags = {workspace = true}
nalgebra = {workspace = true}
derive_more = {workspace = true}
bitvec = {workspace = true}
bevy_obj = {workspace = true}
log = {workspace = true}
bevy_egui = {workspace = true}

bevy_ui_extras = {workspace = true}
egui = {workspace = true}
egui_extras = {workspace = true}




[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}
bevy_mod_raycast = {workspace = true}
bevy_camera_extras = {workspace = true}
