[package]
name = "bevy_synonyms_save"
version = "0.1.0"
edition = "2024"

[dependencies]
moonshine-save = {workspace = true}
log = {workspace = true}
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}
bevy_math = {workspace = true}
bevy_reflect = {workspace = true}
bevy_render = {workspace = true}
bevy_core_pipeline = {workspace = true}
bevy_asset = {workspace = true}
bevy_pbr = {workspace = true}
bevy_derive = {workspace = true}

bevy_synonomize = {workspace = true}